--- a/proyectorestaurante/inventario/templates/base.html
+++ b/proyectorestaurante/inventario/templates/base.html
@@ -2,18 +2,46 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
-
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    {% block extra_css %}{% endblock %}
     <title>Restaurante Reyes</title>
 </head>
 <body>
 
-    {%block content%}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" >
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">RESTAURANTE REYES</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Reservas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pagos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Inventario</a>
+                </li>
+            </ul>
+        </div>
+        <button class="btn btn-success">Cerrar sesión</button>
+        </div>
+    </nav>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 
 
-    {%endblock%}
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
