--- a/proyectorestaurante/inventario/templates/base.html
+++ b/proyectorestaurante/inventario/templates/base.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,30 +12,29 @@
     <title>Restaurante Reyes</title>
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark" >
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark py-3" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">RESTAURANTE REYES</a>
+            <a class="navbar-brand fs-3" href="#">RESTAURANTE REYES</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Reservas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pagos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Inventario</a>
-                </li>
-            </ul>
-        </div>
-        <button class="btn btn-success">Cerrar sesión</button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active fs-5" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="#">Reservas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="#">Pagos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-5" href="#">Inventario</a>
+                    </li>
+                </ul>
+            </div>
+            <button class="btn btn-logout">Cerrar sesión</button>
         </div>
     </nav>
     <div class="container">
@@ -41,12 +42,8 @@
         {% endblock %}
     </div>
 
-
-
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
 </body>
 </html>
